[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features= ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-logging = "2.0.2"
log = "0.4.20"
image = "0.23"
rusty-tesseract = "1.1.9"
